--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@ html, body {
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
+  background: blueviolet;
   background-size: cover;
   background-attachment: fixed;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 100%;
+  font-family: Helvetica;
+  font-size: 75%;
 }
 
 .wrapper {
